--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.1",
+    "babel-plugin-import": "^1.9.1",
+    "date-fns": "^1.29.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-app-rewire-css-modules": "^1.0.0",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "react-test-renderer": "^16.5.2",
+    "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --moduleNameMapper='{\"^@/(.*)\": \"<rootDir>/src/$1\", \"^@components/(.*)\": \"<rootDir>/src/components/$1\", \"^@containers/(.*)\": \"<rootDir>/src/containers/$1\"}' --setupFiles='<rootDir>/setupTests.js'",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
