--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage" : "https://hoanguyen311.github.io/nytimes-react-redux/",
   "browserslist": [
     ">0.2%",
     "not dead",
