--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.10.1",
     "babel-plugin-import": "^1.9.1",
     "date-fns": "^1.29.0",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-app-rewire-css-modules": "^1.0.0",
@@ -24,8 +25,11 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --moduleNameMapper='{\"^@/(.*)\": \"<rootDir>/src/$1\", \"^@components/(.*)\": \"<rootDir>/src/components/$1\", \"^@containers/(.*)\": \"<rootDir>/src/containers/$1\"}' --setupFiles='<rootDir>/setupTests.js'",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://hoanguyen311.github.io/nytimes-react-redux",
   "eslintConfig": {
     "extends": "react-app"
   },
